--- a/views/cleDev.handlebars
+++ b/views/cleDev.handlebars
@@ -49,13 +49,13 @@
                     </li>
                     <!-- MAPS -->
                     <li>
-                        <a data-toggle="collapse" href="#componentsExamples">
+                        <a data-toggle="collapse" href="#componentsExamples2">
                             <i class="pe-7s-plugin"></i>
                                 <p>Maps
                                     <b class="caret"></b>
                                 </p>
                          </a>
-                        <div class="collapse" id="componentsExamples">
+                        <div class="collapse" id="componentsExamples2">
                             <ul class="nav">
                                 <li>
                                     <a href="/fipmap">FIP Map</a>
@@ -92,7 +92,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Combined Portfolio</a>
+                        <a class="navbar-brand" href="#">Cleveland Development</a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
@@ -166,7 +166,7 @@
                 </div>
             </div>
         <!-- ADD CUSTOMER MODAL -->
-        <div class="modal fade" id="addCustomerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal fade" id="modal--create" tabindex="-1" role="dialog" aria-labelledby="modal--create" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
