--- a/views/fipDev.handlebars
+++ b/views/fipDev.handlebars
@@ -50,7 +50,7 @@
                     <!-- MAPS -->
                     <li>
                         <a data-toggle="collapse" href="#componentsExamples2">
-                            <i class="pe-7s-plugin"></i>
+                            <i class="pe-7s-map-marker"></i>
                                 <p>Maps
                                     <b class="caret"></b>
                                 </p>
