--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,6 +56,7 @@
 <!-- Light Bootstrap Dashboard Core javascript and methods -->
 <script src="/assets/js/light-bootstrap-dashboard.js"></script>
 <!-- Light Bootstrap Dashboard DEMO methods, don't include it in your project! -->
+<script src="/assets/js/addfip.js"></script>
 <script src="/assets/js/demo.js"></script>
 <script src="/assets/js/app.js"></script>
 <script src="/assets/js/newTenant.js"></script>
@@ -78,12 +79,6 @@ $().ready(function() {
 
     // Init DatetimePicker
     demo.initFormExtendedDatetimepickers();
-});
-</script>
-<!-- LOAD CALENDAR -->
-<script>
-$().ready(function() {
-    demo.initFullCalendar();
 });
 </script>
 <!-- BOOTSTRAP TABLE -->
@@ -209,14 +204,14 @@ $().ready(function() {
 });
 </script>
 <!-- FIND TOTAL, OCCUPIED, VACANT SF ON TABLES -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 app.initFindOccupancy();
 </script>
-<!-- LOAD GOOGLE MAP -->
+LOAD GOOGLE MAP
 <script>
 $().ready(function() {
     demo.initFullScreenGoogleMap();
 });
-</script>
+</script> -->
 
 </html>
